Add a vanishing box page

--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -20,6 +20,7 @@
 %p= link_to "Model Counts", model_counts_path
 %p= link_to "Project List", project_list_path
 %p= link_to "Today", today_path
+%p= link_to "Vanishing Box", vanishing_box_path
 
 %h2 CRUD Pages
 
