--- a/app/views/analytics_reports/show.html.haml
+++ b/app/views/analytics_reports/show.html.haml
@@ -5,17 +5,6 @@
     %p.m-0= link_to "next", analytics_report_path(analytics_report.next_params)
   %div.flex.justify-between.border-b-8.pb-6.border-dark-gray
     %p.m-0 Metrics: #{link_to "Browsers", analytics_report_path(metric: "browsers")}, #{link_to "Pages", analytics_report_path(metric: "pages")}, #{link_to "Referrers", analytics_report_path(metric: "referrers")}
+    %p.m-0 Modes: #{link_to "Detail", analytics_report_path(mode: "detail")}, #{link_to "Summary", analytics_report_path(mode: "summary")}
 
-%p= summary_description(analytics_report)
-
-%table
-  %thead
-    %tr
-      %th= analytics_report.metric_name.capitalize
-      %th.text-right Count
-
-  %tbody
-    - analytics_report.rows.each do |row|
-      %tr
-        %td= row.label
-        %td.text-right= row.count.to_fs(:delimited)
+= render analytics_report
