--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -13,6 +13,7 @@
 
 %h2 Private Pages
 
+%p= link_to "Analytics", analytics_report_path(Analytics::SummaryReport.default_params)
 %p= link_to "Cybertail", cybertail_path
 %p= link_to "Financial Report", financial_report_path(year: Time.now.year)
 %p= link_to "Fuzzies", fuzzies_path
