--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -25,6 +25,7 @@
 
 %h2 CRUD Pages
 
+%p= link_to "Apache Log Files", crud_apache_log_files_path
 %p= link_to "Books", crud_books_path
 %p= link_to "CSV Uploads", crud_csv_uploads_path
 %p= link_to "Financial Accounts", crud_financial_accounts_path
