--- a/app/views/crud/raw_hooks/new.html.haml
+++ b/app/views/crud/raw_hooks/new.html.haml
@@ -2,4 +2,8 @@
 
 %p= link_to "Raw Hook List", crud_raw_hooks_path
 
-= render "form", raw_hook: raw_hook, button_label: "create"
+= form_with model: [:crud, raw_hook] do |form|
+  = form.text_area :headers, placeholder: "headers"
+  = form.text_area :params, placeholder: "params"
+  = form.text_area :body, placeholder: "body"
+  = form.button "create"
